# selfedu.python3

./: .gitignore  README.md  lesson_1_2.py  lesson_1_3.py  lesson_1_4.py  lesson_1_5.py  lesson_1_6.py  lesson_1_7.py  lesson_2_1.py  lesson_2_2.py  lesson_2_3.py  product_class.csv  pyproject.toml  test_1_2.py  test_1_4.py  test_1_5.py  test_1_6.py  test_1_7.py  test_2_1.py  test_2_2.py  test_2_3.py
