[tool.poetry]
name = "selfedu-python2"
version = "0.1.0"
description = ""
authors = ["Yahor <auramenka87@gmail.com>"]
readme = "README.md"
packages = [{include = "selfedu"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
accessify = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
